--- a/kalima-platform/frontend/public/locales/ar/login.json
+++ b/kalima-platform/frontend/public/locales/ar/login.json
@@ -22,5 +22,38 @@
     "loggingIn": "جاري تسجيل الدخول...",
     "login": "تسجيل الدخول",
     "needAccount": "ليس لديك حساب؟",
-    "register": "سجل هنا"
+    "register": "سجل هنا",
+    "errors": {
+      "loginFailed": "فشل تسجيل الدخول. يرجى التحقق من البيانات",
+      "invalidCredentials": "بريد إلكتروني/هاتف أو كلمة مرور خاطئة",
+      "accountLocked": "الحساب مغلق. تواصل مع الدعم",
+      "sessionExpired": "انتهت الجلسة. يرجى تسجيل الدخول مجددًا",
+      "networkError": "خطأ في الشبكة. تحقق من الاتصال",
+      "serverError": "خطأ في الخادم. حاول لاحقًا",
+      "validationError": "تنسيق الإدخال غير صالح",
+      "emailRequired": "البريد الإلكتروني مطلوب",
+      "phoneRequired": "رقم الهاتف مطلوب",
+      "passwordRequired": "كلمة المرور مطلوبة",
+      "emailNotFound": "البريد الإلكتروني غير مسجل",
+      "invalidRequest": "طلب إعادة تعيين غير صالح",
+      "resetLimit": "محاولات كثيرة. حاول لاحقًا",
+      "expiredToken": "انتهت صلاحية رابط التعيين",
+      "invalidOtp": "رمز التحقق غير صالح",
+      "expiredOtp": "انتهت صلاحية الرمز. اطلب رمزًا جديدًا",
+      "retryLimit": "محاولات كثيرة. انتظر ٥ دقائق",
+      "passwordMismatch": "كلمات المرور غير متطابقة",
+      "weakPassword": "استخدم ٨+ أحرف مع أرقام وحروف",
+      "emailExists": "البريد الإلكتروني مسجل مسبقًا",
+      "phoneExists": "رقم الهاتف مستخدم مسبقًا",
+      "invalidEmail": "تنسيق بريد إلكتروني غير صالح",
+      "invalidPhone": "تنسيق رقم هاتف غير صالح",
+      "passwordComplexity": "يجب أن تحتوي كلمة المرور على ٨+ أحرف وأرقام",
+      "requiredField": "هذا الحقل مطلوب",
+      "invalidInput": "تنسيق الإدخال غير صالح",
+      "unauthorized": "مطلوب مصادقة",
+      "forbidden": "وصول مرفوض",
+      "notFound": "الملف غير موجود",
+      "timeout": "انتهت مدة الطلب"
+
+  }
   }
