--- a/kalima-platform/frontend/public/locales/en/login.json
+++ b/kalima-platform/frontend/public/locales/en/login.json
@@ -22,5 +22,39 @@
     "loggingIn": "Logging in...",
     "login": "Login",
     "needAccount": "Don't have an account?",
-    "register": "Register here"
+    "register": "Register here",
+  
+      "errors": {
+        "loginFailed": "Login failed. Please check your credentials",
+        "invalidCredentials": "Invalid email/phone or password",
+        "accountLocked": "Account locked. Contact support",
+        "sessionExpired": "Session expired. Please login again",
+        "networkError": "Network error. Check your connection",
+        "serverError": "Server error. Try again later",
+        "validationError": "Invalid input format",
+        "emailRequired": "Email is required",
+        "phoneRequired": "Phone number is required",
+        "passwordRequired": "Password is required",
+        "emailNotFound": "Email not registered",
+        "invalidRequest": "Invalid reset request",
+        "resetLimit": "Too many attempts. Try later",
+        "expiredToken": "Reset link expired",
+        "invalidOtp": "Invalid verification code",
+        "expiredOtp": "Code expired. Request new one",
+        "retryLimit": "Too many attempts. Wait 5 minutes",
+        "passwordMismatch": "Passwords don't match",
+        "weakPassword": "Use 8+ chars with mix of letters/numbers",
+        "emailExists": "Email already registered",
+        "phoneExists": "Phone number already in use",
+        "invalidEmail": "Invalid email format",
+        "invalidPhone": "Invalid phone format",
+        "passwordComplexity": "Password needs 8+ chars with numbers",
+        "requiredField": "This field is required",
+        "invalidInput": "Invalid input format",
+        "unauthorized": "Authentication required",
+        "forbidden": "Access denied",
+        "notFound": "Resource not found",
+        "timeout": "Request timed out"
+      
+    }
   }
