--- a/kalima-platform/frontend/public/locales/ar/register.json
+++ b/kalima-platform/frontend/public/locales/ar/register.json
@@ -71,7 +71,7 @@
       "gaming": " ألعاب",
       "art" : "فن",
       "technology": "تكنولوجيا",
-      "dancing": "رقص",
+      "bicycling": "ركوب دراجات",
       "photography": "تصوير"
     },
     "review": {
