--- a/kalima-platform/frontend/public/locales/en/register.json
+++ b/kalima-platform/frontend/public/locales/en/register.json
@@ -72,7 +72,7 @@
     "gaming": "Games",
     "art": "Art",
     "technology": "Technology",
-    "dancing": "Dancing",
+    "bicycling": "Bicycling",
     "photography": "Photography"
   },
   "review": {
