--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -22,15 +22,23 @@
         "codesGenerated": "تم إنشاء أكواد الخصم بنجاح"
       },
       "form": {
-        "pointsAmount": "قيمة النقاط",
+        "pointsAmount": "مقدار النقاط",
         "numCodes": "عدد الأكواد",
         "codeType": "نوع الكود",
         "general": "عام",
-        "specific": "محدد لمحاضر",
-        "promo": "كود خاص",
+        "specific": "مخصص",
+        "promo": "ترويجي",
         "lecturer": "المحاضر",
-        "lecturerPlaceholder": "اختر محاضر"
+        "lecturerPlaceholder": "اختر محاضر",
+        "generateQrCodes": "إنشاء رموز QR",
+        "qrCodeDescription": "إنشاء رموز QR لاستخدام الأكواد بسهولة",
+        "qrCodeSize": "حجم رمز QR"
       },
+      
+      "printQrCodes": "طباعة رموز QR",
+      "downloadAllQrCodes": "تحميل جميع رموز QR",
+    
+      "points": "نقاط",
       "userManagement": {
         "title": "سجل الاجراءات",
         "createUser": "إنشاء مستخدم جديد",
@@ -200,5 +208,16 @@
     },
     "errors": {
       "fetchPromo": "فشل في جلب الأكواد الترويجية"
+    },
+    "revenue": {
+      "errorLoadingRevenue": "خطأ في تحميل بيانات الإيرادات",
+      "lecturerRevenue": "إيرادات المحاضر",
+      "revenueSummary": "ملخص الإيرادات",
+      "totalRevenue": "إجمالي الإيرادات",
+      "currency": "ريال سعودي",
+      "totalPurchases": "إجمالي المشتريات",
+      "monthsWithRevenue": "أشهر بها إيرادات",
+      "purchaseCount": "عدد المشتريات",
+      "noRevenueData": "لا توجد بيانات إيرادات لهذا المحاضر"
     }
   }
