--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -49,5 +49,6 @@
   "myDashboard": "لوحة التحكم",
   "Packages": "الباقات",
   "select": "اختر",
-  "Create": "اضافة"
+  "Create": "اضافة",
+  "MyLectures": "محاضراتي"
   }
