--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -49,5 +49,6 @@
   "myDashboard": "My Dashboard",
   "Packages": "Packages",
   "select": "Select",
-  "Create": "Create"
+  "Create": "Create",
+  "MyLectures": "My Lectures"
 }
