--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -137,6 +137,7 @@
       
       "roles": {
         "admin": "مسؤول",
+        "subadmin": "مسؤول فرعي",
         "lecturer": "معلم",
         "student": "طالب"
       },
