--- a/kalima-platform/frontend/public/locales/en/admin.json
+++ b/kalima-platform/frontend/public/locales/en/admin.json
@@ -136,6 +136,7 @@
       
       "roles": {
         "admin": "Admin",
+        "subadmin": "Subadmin",
         "lecturer": "Lecturer",
         "student": "Student"
       },
