--- a/kalima-platform/frontend/public/locales/ar/register.json
+++ b/kalima-platform/frontend/public/locales/ar/register.json
@@ -80,7 +80,7 @@
     "buttons": {
       "previous": "السابق",
       "next": "التالي",
-      "submit": "إرسال",
+      "submit":" تم",
       "addAnotherChild": "إضافة ابن آخر"
     },
     "role" : { 
