--- a/kalima-platform/frontend/public/locales/en/register.json
+++ b/kalima-platform/frontend/public/locales/en/register.json
@@ -81,7 +81,7 @@
   "buttons": {
     "previous": "Previous",
     "next": "Next",
-    "submit": "Submit",
+    "submit": "Done",
     "addAnotherChild": "Add Another Child"
   },
   "role": {
