home page kinda done

--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -215,7 +215,7 @@
       "lecturerRevenue": "إيرادات المحاضر",
       "revenueSummary": "ملخص الإيرادات",
       "totalRevenue": "إجمالي الإيرادات",
-      "currency": "ريال سعودي",
+      "currency": "جنيه",
       "totalPurchases": "إجمالي المشتريات",
       "monthsWithRevenue": "أشهر بها إيرادات",
       "purchaseCount": "عدد المشتريات",
