--- a/kalima-platform/frontend/public/locales/ar/home.json
+++ b/kalima-platform/frontend/public/locales/ar/home.json
@@ -1,5 +1,12 @@
 {
-
+  "welcome": {
+    "title": "مرحبا بك في منصة {{highlight}}كلمة{{/highlight}}",
+    "description": "منصة كلمة هي منصة تعليم الكتروني توفر المنصة موارد للطلاب من الصف الرابع الابتدائي حتى الصف الثالث الثانوي.",
+    "kalima": "كلمة",
+    "maleStudentAlt": "طالب",
+    "femaleStudentAlt": "طالبة"
+  },
+  "signIn": "تسجيل الدخول",
     "hero": {
       "title": "اقصر طريق نحو النجاح الباهر",
       "heading": "مرحبا بك في منصة كلمة",
@@ -29,32 +36,29 @@
     "add": "إضافة معلم"
   },
     "services": {
-      "title": "خدماتنا",
-      "heading": "هدفنا هو تبسيط المواد لضمان تفوقك ",
-      "withUs": "معانا",
-      "items": [
-        {
-          "title": "متابعة الأداء",
-          "subtitle": "في أي وقت",
-          "description": "نقدم متابعة مستمرة لأداء الطلاب من خلال تقارير دورية توضح مستوى التقدم والنقاط التي تحتاج إلى تحسين"
-        },
-        {
-          "title": "اختبارات ثابتة",
-          "subtitle": "في منصتنا",
-          "description": "نقدم اختبارات متنوعة لقياس مستوى الطلاب في كل مادة مع تصحيح فوري وشرح للإجابات الصحيحة"
-        },
-        {
-          "title": "معلمين على",
-          "subtitle": "أعلى مستوى",
-          "description": "نقدم فريق من المعلمين المتميزين ذوي الخبرة في شرح المناهج الدراسية بطريقة مبسطة وممتعة"
-        },
-        {
-          "title": "توفير كورسات",
-          "subtitle": "عالية الجودة",
-          "description": "نقدم كورسات تعليمية متكاملة تغطي جميع أجزاء المنهج مع شرح مفصل للمفاهيم الأساسية والتطبيقات العملية"
-        }
-      ]
+    "title": "خدماتنا",
+    "subtitle": "هدفنا هو تبسيط المعلومة لضمان تفوقك الدراسي",
+    "learnAnytime": {
+      "title": "التعلم في أي وقت",
+      "subtitle": "مرونة كاملة",
+      "description": "الوصول إلى الدروس 24/7 مع إمكانية التكرار والمشاهدة في الوقت الذي يناسبك"
     },
+    "teachers": {
+      "title": "معلمين خبراء معتمدين",
+      "subtitle": "خبرة عالية",
+      "description": "فريق من المعلمين المؤهلين ذوي الخبرة الطويلة في المناهج التعليمية"
+    },
+    "curriculum": {
+      "title": "مناهج عالية الجودة",
+      "subtitle": "محتوى متميز",
+      "description": "مناهج مصممة بعناية لتغطية جميع احتياجات الطلاب مع ضمان الجودة العالية"
+    },
+    "certificates": {
+      "title": "شهادات معتمدة",
+      "subtitle": "اعتماد رسمي",
+      "description": "حصول الطلاب على شهادات معتمدة بعد إتمام كل مستوى تعليمي"
+    }
+  },
     "teachers": {
     "title": "معلمينا",
     "heading": "شوف كل معلمين ",
@@ -132,4 +136,6 @@
     "viewDetails": "عرض التفاصيل"
   },
   "priceUnavailable": "السعر غير متاح"
+  
+
 }
