--- a/kalima-platform/frontend/public/locales/en/admin.json
+++ b/kalima-platform/frontend/public/locales/en/admin.json
@@ -213,7 +213,7 @@
       "lecturerRevenue": "Lecturer Revenue",
       "revenueSummary": "Revenue Summary",
       "totalRevenue": "Total Revenue",
-      "currency": "SAR",
+      "currency": "EGP",
       "totalPurchases": "Total Purchases",
       "monthsWithRevenue": "Months with Revenue",
       "purchaseCount": "Purchase Count",
