I would rather die of passion than of boredom.
lectures finally translated.

--- a/kalima-platform/frontend/public/locales/ar/lecturesPage.json
+++ b/kalima-platform/frontend/public/locales/ar/lecturesPage.json
@@ -1,4 +1,12 @@
 {
+  "types": {
+      "course": "دورة",
+      "year": "سنة",
+      "term": "فصل",
+      "month": "شهر",
+      "lecture": "محاضرة"
+      
+    },
   "lecturesPage": {
     "pageTitle": {
       "manage": "إدارة المحاضرات",
@@ -56,6 +64,7 @@
       "term": "فصل",
       "month": "شهر",
       "lecture": "محاضرة"
+      
     },
     "error": {
       "title": "حدث خطأ ما!"
@@ -92,5 +101,10 @@
       "previous": "السابق",
       "next": "التالي"
     }
+  },
+   "mobileOnly": {
+    "title": "محتوى للهاتف المحمول فقط",
+    "message": "هذا المحتوى متاح فقط على الأجهزة المحمولة.",
+    "backButton": "العودة إلى الصفحة الرئيسية"
   }
 }
