--- a/kalima-platform/frontend/public/locales/en/promoCodes.json
+++ b/kalima-platform/frontend/public/locales/en/promoCodes.json
@@ -1,36 +1,86 @@
 {
-    "title": "Promo Codes",
-    "balance": {
-      "title": "Balance",
-      "currency": "EGP"
+  "title": "Promo Codes",
+  "subtitle": "Manage your promo codes and points balance",
+  "balance": {
+    "title": "Balance",
+    "currency": "EGP",
+    "description": "Total points available to use"
+  },
+  "redeem": {
+    "title": "Redeem Code",
+    "button": "Redeem Code",
+    "modalTitle": "Redeem Code",
+    "placeholder": "Enter your promo code",
+    "rulesTitle": "Redemption Rules",
+    "rules": {
+      "1": "Each code can only be redeemed once",
+      "2": "You can only use points with the teacher who issued the card"
     },
-    "redeem": {
-      "title": "Redeem Code",
-      "button": "Redeem Code",
-      "modalTitle": "Redeem Code",
-      "placeholder": "Please enter promo code",
-      "rules": {
-        "1": "Each code can only be redeemed once",
-        "2": "You can use recharge points only with the teacher you purchased from"
-      }
-    },
-    "transactions": {
-      "title": "Transaction History"
-    },
-    "sort": {
-      "label": "Sort By",
-      "newest": "Newest First",
-      "oldest": "Oldest First"
-    },
-    "table": {
-      "created": "Created At",
-      "teacher": "Teacher Name",
-      "amount": "Card Balance",
-      "code": "Promo Code",
-      "id": "Code ID"
-    },
-    "noData": "No data available",
-    "arrowAlt": "arrow pointing between cards",
-    "decorativeAlt": "decorative dots",
-    "toggleSidebar": "Toggle Sidebar"
+    "success": "Code redeemed successfully!",
+    "errors": {
+      "emptyCode": "Please enter a code",
+      "generic": "Failed to redeem code",
+      "invalidCode": "Invalid code"
+    }
+  },
+  "transactions": {
+    "title": "Transaction History",
+    "types": {
+      "codeRedemption": "Code Redemption",
+      "coursePurchase": "Course Purchase"
+    }
+  },
+  "lectures": {
+    "title": "Lecture Access"
+  },
+  "actions": {
+    "title": "Quick Actions"
+  },
+  "lecturerPoints": {
+    "title": "Points by Lecturer",
+    "description": "Total points available for each lecturer"
+  },
+  "scanner": {
+    "title": "Scan QR Code",
+    "button": "Scan QR",
+    "instructions": "Point your camera at the QR code",
+    "switchCamera": "Switch Camera",
+    "initializing": "Starting camera...",
+    "errors": {
+      "cameraPermission": "Camera permission denied",
+      "initFailed": "Failed to initialize scanner",
+      "invalidCode": "Invalid QR code"
+    }
+  },
+  "sort": {
+    "label": "Sort by",
+    "newest": "Newest first",
+    "oldest": "Oldest first"
+  },
+  "table": {
+    "date": "Date",
+    "type": "Type",
+    "amount": "Amount",
+    "teacher": "Teacher",
+    "actions": "Actions",
+    "created": "Created",
+    "code": "Code",
+    "id": "ID"
+  },
+  "noData": "No data available",
+  "noLecturerPoints": "No lecturer points available",
+  "noLectures": "No lectures available",
+  "noLecturesDescription": "You haven't accessed any lectures yet",
+  "user": "User",
+  "student": "Student",
+  "generalPoints": "General",
+  "notAvailable": "N/A",
+  "views": "views",
+  "totalViews": "total views",
+  "copy": "Copy to clipboard",
+  "details": "View details",
+  "retry": "Retry",
+  "errors": {
+    "fetchFailed": "Failed to fetch data"
   }
+}
