--- a/kalima-platform/frontend/public/locales/ar/register.json
+++ b/kalima-platform/frontend/public/locales/ar/register.json
@@ -3,6 +3,9 @@
   "parentRegister": "تسجيل ولي الأمر",
   "dismiss": "إغلاق",
   "teacherRegister" : "تسجيل المدرس",
+  "center" : "سنتر",
+  "school" : "مدرسة",
+  "both" : "كلاهما",
     "steps": {
       "personalInfo": "المعلومات الأساسية",
       "parentInfo": "معلومات الاتصال",
@@ -53,7 +56,33 @@
       "validatepassword": "تاكيد كلمة المرور",
      "subject" : "المادة",
      "subjectPlaceholder" : "اكتب المادة",
-     "children" : "ابناء"
+     "children" : "ابناء",
+     "addOtherHobby": "اضافة هواية",
+     "add" : "اضافة",
+     "cancel" : "الغاء",
+     "enterHobby" : "اكتب هواية",
+     "teachesAtType": "أين تدرس؟",
+      "selectTeachesAt": "حدد مكان التدريس",
+      "centers": "المراكز",
+      "centerName": "اسم المركز",
+      "school": "المدرسة",
+      "socialMedia": "وسائل التواصل الاجتماعي",
+      "selectPlatform": "اختر المنصة",
+      "accountName": "اسم الحساب",
+      "selectSubject": "اختر المادة",
+      "facebook": "فيسبوك",
+      "twitter": "تويتر",
+      "instagram": "إنستاغرام",
+      "linkedin": "لينكدين",
+      "tikTok": "تيك توك",
+      "youtube": "يوتيوب",
+      "telegram": "تيليجرام",
+      "whatsApp": "واتساب",
+      "government": "المحافظة",
+    "selectGovernment": "اختر المحافظة",
+    "administrationZone": "المنطقة الإدارية",
+    "selectAdministrationZone": "اختر المنطقة الإدارية"
+
     },
     "gender": {
       "male": "ذكر",
@@ -100,7 +129,10 @@
       "3rd Preparatory": "الصف الثالث الإعدادي",
       "1st Secondary": "الصف الأول الثانوي",
       "2nd Secondary": "الصف الثاني الثانوي",
-      "3rd Secondary": "الصف الثالث الثانوي"
+      "3rd Secondary": "الصف الثالث الثانوي",
+      "primary": "ابتدائي",
+      "preparatory": "إعدادي",
+      "secondary": "ثانوي"
 },
     "roleSelection": {
      "title": "اختر دورك",
@@ -134,7 +166,14 @@
         "parentPhoneRequired": "رقم هاتف ولي الأمر مطلوب",
         "emailExists": "البريد الإلكتروني مسجل مسبقًا",
         "phoneExists": "رقم الهاتف مسجل مسبقًا",
-        "invalidSequenceId": "تنسيق معرف تسلسل الطفل غير صالح (٢٤ حرفًا)"
+        "invalidSequenceId": "تنسيق معرف تسلسل الطفل غير صالح (٢٤ حرفًا)",
+        "teachesAtType": "الرجاء تحديد مكان التدريس",
+        "centers": "الرجاء إضافة مركز واحد على الأقل",
+        "school": "اسم المدرسة مطلوب",
+        "socialMediaPlatform": "المنصة مطلوبة",
+        "socialMediaAccount": "اسم الحساب مطلوب",
+        "governmentRequired": "المحافظة مطلوبة",
+    "administrationZoneRequired": "المنطقة الإدارية مطلوبة"
         },
         "errors": {
           "apiError": "خطأ في الخادم",
